Aldebaran final refinements + Dockerfile cleaning + Bellatrix adaptation