@@ -8,6 +8,7 @@ import apex.stellar.aldebaran.dto.MovementMuscleRequest;
 import apex.stellar.aldebaran.dto.MovementRequest;
 import apex.stellar.aldebaran.dto.MovementResponse;
 import apex.stellar.aldebaran.dto.MovementSummaryResponse;
+import apex.stellar.aldebaran.dto.MuscleResponse;
 import apex.stellar.aldebaran.exception.DataConflictException;
 import apex.stellar.aldebaran.exception.ResourceNotFoundException;
 import apex.stellar.aldebaran.mapper.MovementMapper;
@@ -33,10 +34,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @ExtendWith(MockitoExtension.class)
 class MovementServiceTest {
 
-  @Mock private MovementRepository movementRepository;
   @Mock private MuscleRepository muscleRepository;
+  @Mock private MuscleService muscleService;
+  @Mock private MovementRepository movementRepository;
   @Mock private MovementMapper movementMapper;
-
   @InjectMocks private MovementService movementService;
 
   private Movement movement;
@@ -45,7 +46,7 @@ class MovementServiceTest {
 
   @BeforeEach
   void setUp() {
-    // Setup basic entities
+    // Set up basic entities
     // Use SQUAT category which belongs to WEIGHTLIFTING modality (Prefix WL-SQ)
     movement =
         Movement.builder()
@@ -84,11 +85,11 @@ class MovementServiceTest {
   void testSearchMovements() {
     // Given
     MovementSummary projection = mock(MovementSummary.class);
-    when(projection.getId()).thenReturn("WL-SQ-1234");
-    when(projection.getName()).thenReturn("Back Squat");
-    when(projection.getNameAbbreviation()).thenReturn("BS");
-    when(projection.getCategory()).thenReturn(Category.SQUAT);
-    when(projection.getImageUrl()).thenReturn(null);
+
+    MovementSummaryResponse expectedResponse =
+        new MovementSummaryResponse("WL-SQ-1234", "Back Squat", "BS", Category.SQUAT, null);
+
+    when(movementMapper.toSummary(projection)).thenReturn(expectedResponse);
 
     when(movementRepository.findProjectedByNameContainingIgnoreCase("Squat"))
         .thenReturn(List.of(projection));
@@ -98,10 +99,10 @@ class MovementServiceTest {
 
     // Then
     assertEquals(1, results.size());
-    assertEquals("WL-SQ-1234", results.get(0).id());
+    assertEquals("WL-SQ-1234", results.getFirst().id());
 
-    // Verify we called the Optimized Projection method, not the full entity search
     verify(movementRepository).findProjectedByNameContainingIgnoreCase("Squat");
+    verify(movementMapper).toSummary(projection);
   }
 
   @Test
@@ -163,7 +164,10 @@ class MovementServiceTest {
   void testCreateMovement_Success() {
     // Mocks
     when(movementMapper.toEntity(request)).thenReturn(movement);
-    when(muscleRepository.findByMedicalName("Quadriceps")).thenReturn(Optional.of(muscle));
+    MuscleResponse muscleResponse = mock(MuscleResponse.class);
+    when(muscleResponse.id()).thenReturn(1L);
+    when(muscleService.getMuscle("Quadriceps")).thenReturn(muscleResponse);
+    when(muscleRepository.getReferenceById(1L)).thenReturn(muscle);
     when(movementMapper.toMuscleEntity(any())).thenReturn(new MovementMuscle());
     when(movementRepository.save(any(Movement.class))).thenReturn(movement);
     when(movementMapper.toResponse(movement)).thenReturn(mock(MovementResponse.class));
@@ -178,7 +182,7 @@ class MovementServiceTest {
         "ID should start with correct semantic prefix (WL-SQ)");
 
     // Verify Muscle Linking
-    verify(muscleRepository).findByMedicalName("Quadriceps");
+    verify(muscleService).getMuscle("Quadriceps");
     assertEquals(1, movement.getTargetedMuscles().size(), "Should have linked 1 muscle");
 
     assertNotNull(response);
@@ -197,7 +201,10 @@ class MovementServiceTest {
             .build();
 
     when(movementMapper.toEntity(request)).thenReturn(newMovement);
-    when(muscleRepository.findByMedicalName(any())).thenReturn(Optional.of(muscle));
+    MuscleResponse muscleResponse = mock(MuscleResponse.class);
+    when(muscleResponse.id()).thenReturn(1L);
+    when(muscleService.getMuscle(anyString())).thenReturn(muscleResponse);
+    when(muscleRepository.getReferenceById(1L)).thenReturn(muscle);
     when(movementMapper.toMuscleEntity(any())).thenReturn(new MovementMuscle());
     when(movementRepository.save(any(Movement.class))).thenAnswer(inv -> inv.getArgument(0));
     when(movementMapper.toResponse(any())).thenReturn(mock(MovementResponse.class));
@@ -216,13 +223,29 @@ class MovementServiceTest {
   @DisplayName("createMovement: should throw exception if muscle name is invalid")
   void testCreateMovement_InvalidMuscle() {
     when(movementMapper.toEntity(request)).thenReturn(movement);
-    when(muscleRepository.findByMedicalName("Quadriceps")).thenReturn(Optional.empty());
+
+    when(muscleService.getMuscle("Quadriceps"))
+        .thenThrow(new ResourceNotFoundException("error.muscle.not.found"));
 
     ResourceNotFoundException ex =
         assertThrows(
             ResourceNotFoundException.class, () -> movementService.createMovement(request));
 
-    assertEquals("error.muscle.name.not.found", ex.getMessageKey());
+    assertEquals("error.muscle.not.found", ex.getMessageKey());
+  }
+
+  @Test
+  @DisplayName("createMovement: should throw DataConflictException if name already exists")
+  void testCreateMovement_DuplicateName() {
+    // GIVEN
+    when(movementRepository.existsByNameIgnoreCase(request.name())).thenReturn(true);
+
+    // WHEN / THEN
+    DataConflictException ex =
+        assertThrows(DataConflictException.class, () -> movementService.createMovement(request));
+
+    assertEquals("error.movement.duplicate", ex.getMessageKey());
+    verify(movementRepository, never()).save(any());
   }
 
   @Test
@@ -234,7 +257,10 @@ class MovementServiceTest {
     movement.getTargetedMuscles().add(new MovementMuscle());
 
     when(movementRepository.findById(id)).thenReturn(Optional.of(movement));
-    when(muscleRepository.findByMedicalName("Quadriceps")).thenReturn(Optional.of(muscle));
+    MuscleResponse muscleResponse = mock(MuscleResponse.class);
+    when(muscleResponse.id()).thenReturn(1L);
+    when(muscleService.getMuscle("Quadriceps")).thenReturn(muscleResponse);
+    when(muscleRepository.getReferenceById(1L)).thenReturn(muscle);
     when(movementMapper.toMuscleEntity(any())).thenReturn(new MovementMuscle());
     when(movementRepository.save(movement)).thenReturn(movement);
     when(movementMapper.toResponse(movement)).thenReturn(mock(MovementResponse.class));
@@ -262,24 +288,63 @@ class MovementServiceTest {
   void testUpdateMovement_InvalidMuscle() {
     String id = "WL-SQ-1234";
     when(movementRepository.findById(id)).thenReturn(Optional.of(movement));
-    when(muscleRepository.findByMedicalName("Quadriceps")).thenReturn(Optional.empty());
+    when(muscleService.getMuscle("Quadriceps"))
+        .thenThrow(new ResourceNotFoundException("error.muscle.not.found"));
 
     ResourceNotFoundException ex =
         assertThrows(
             ResourceNotFoundException.class, () -> movementService.updateMovement(id, request));
 
-    assertEquals("error.muscle.name.not.found", ex.getMessageKey());
+    assertEquals("error.muscle.not.found", ex.getMessageKey());
   }
 
   @Test
-  @DisplayName("createMovement: should throw DataConflictException if name already exists")
-  void testCreateMovement_DuplicateName() {
-    // GIVEN
+  @DisplayName("updateMovement: should allow renaming if new name is unique")
+  void testUpdateMovement_RenameSuccess() {
+    // Given
+    String id = "WL-SQ-1234";
+    // Le mouvement en base a un ancien nom
+    Movement existingMovement =
+        Movement.builder().id(id).name("Old Squat").targetedMuscles(new HashSet<>()).build();
+
+    when(movementRepository.findById(id)).thenReturn(Optional.of(existingMovement));
+
+    // Le request demande à le renommer en "Back Squat" (défini dans le setUp).
+    // On simule que ce nom n'existe pas encore
+    when(movementRepository.existsByNameIgnoreCase(request.name())).thenReturn(false);
+
+    // Mocks standards pour la sauvegarde et les muscles
+    MuscleResponse muscleResponse = mock(MuscleResponse.class);
+    when(muscleResponse.id()).thenReturn(1L);
+    when(muscleService.getMuscle("Quadriceps")).thenReturn(muscleResponse);
+    when(muscleRepository.getReferenceById(1L)).thenReturn(muscle);
+    when(movementMapper.toMuscleEntity(any())).thenReturn(new MovementMuscle());
+
+    when(movementRepository.save(existingMovement)).thenReturn(existingMovement);
+    when(movementMapper.toResponse(existingMovement)).thenReturn(mock(MovementResponse.class));
+
+    // When
+    MovementResponse result = movementService.updateMovement(id, request);
+
+    // Then
+    assertNotNull(result);
+    verify(movementRepository).existsByNameIgnoreCase(request.name());
+    verify(movementRepository).save(existingMovement);
+  }
+
+  @Test
+  @DisplayName("updateMovement: should throw DataConflictException when renaming to existing name")
+  void testUpdateMovement_Conflict() {
+    // Given
+    String id = "WL-SQ-1234";
+    Movement existingMovement = Movement.builder().id(id).name("Old Squat").build();
+    when(movementRepository.findById(id)).thenReturn(Optional.of(existingMovement));
     when(movementRepository.existsByNameIgnoreCase(request.name())).thenReturn(true);
 
-    // WHEN / THEN
+    // When & Then
     DataConflictException ex =
-        assertThrows(DataConflictException.class, () -> movementService.createMovement(request));
+        assertThrows(
+            DataConflictException.class, () -> movementService.updateMovement(id, request));
 
     assertEquals("error.movement.duplicate", ex.getMessageKey());
     verify(movementRepository, never()).save(any());
